<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/xll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DbmsActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/xtvN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snom" />

    <EditText
        android:id="@+id/xetN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/xtvI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid" />
    <EditText
        android:id="@+id/xetI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/xbnA"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/ins"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/xbnU"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/upd"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/xbnD"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/del"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/xbnL"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/cons"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/xtvL"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />
</LinearLayout>